Added express server and start script

--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "node server.js",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "express": "^4.21.1",
     "gsap": "^3.12.5",
     "lenis": "^1.1.14",
     "prop-types": "^15.8.1",
