feat: changed Hero Title to ReactBits Rotating text.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "express": "^4.21.1",
+    "framer-motion": "^12.4.11",
     "gsap": "^3.12.5",
     "lenis": "^1.1.14",
     "prop-types": "^15.8.1",
